--- a/style.css
+++ b/style.css
@@ -1,34 +1,32 @@
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* nav div:first-child {
-    background-color: blue;
+  background-color: blue;
 } */
 
 nav  {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 nav a {
-    /* display: block; */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 90px;
-    height: 48px;
-    background-color: #F42;
-    /* padding: .96rem .8rem; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 90px;
+  height: 48px;
+  background-color: #F42;
 }
 
 nav a img {
-    width: 66px;
-    height: 16px;
+  width: 66px;
+  height: 16px;
 }
 
 /* nav div {
@@ -47,106 +45,147 @@ nav a img {
 } */
 
 nav ul {
-    display: flex;
-    justify-content: center;
-    margin: auto;
+  display: flex;
+  justify-content: center;
+  margin: auto;
 }
 
 nav li {
-    float: left;
+  float: left;
     /* justify-self: center;
     align-self: center; */
     /* margin: auto; */
 }
 
 nav .fas::before {
-    padding-top: 25px;
+  padding-top: 25px;
 }
 
 nav .fa-bars {
-    color: crimson;
+  color: crimson;
 }
 
 nav div .fas {
-    /* margin: auto; */
-    width: 4.8rem;
-    height: 4.8rem;
-    font-size: 2rem;
-    border-left: 0.1rem solid gray;
-    /* text-align: center; */
+  width: 4.8rem;
+  height: 4.8rem;
+  font-size: 2rem;
+  border-left: 0.1rem solid gray;
 }
 
-.main-section {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(3, 16.2rem);
-    grid-gap: 0.8rem;
-    justify-content: start;
-    align-items: center;
-    margin: 0 10px;
+.hero-section {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, 16.2rem);
+  grid-gap: 0.8rem;
+  justify-content: start;
+  align-items: center;
+  margin: 0 10px;
 }
 
-.main-section article:first-child {
-    background-image: url('https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/Zuck-shopping-jio-796x418.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
+.hero-section article:first-child {
+  background-image: url('https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/03/Zuck-shopping-jio-796x418.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .main-article {
-    height: 100%;
-    overflow: hidden;
-    border: 1px solid #000;
-    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 1));
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    padding: 2rem 1.5rem;
+  height: 100%;
+  overflow: hidden;
+  border: 1px solid #000;
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 1));
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 2rem 1.5rem;
 }
 
 .main-article a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 2rem;
+	text-decoration: none;
+	color: #fff;
+	font-size: 2rem;
 }
 
+.latest {
+  margin: 6rem 20px;
+}
 
+.category-name {
+	font-size: 2.8rem;
+	font-weight: bold;
+}
+
+.latest-article {
+	border: 1px solid #000;
+	margin: 30px 0 20px 0;
+	width: 90%;
+	height: 7.5rem;
+}
+
+.latest-article img {
+	width: 7.5rem;
+	height: 7.5rem;
+	float: left;
+	margin-right: 10px;
+}
+
+.latest-article figcaption {
+  margin-left: 20px;
+}
 
 @media only screen and (min-width: 768px) {
-    .main-section {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(2, 16.2rem);
-        grid-template-areas: 
-            "article1 article1 article2"
-            "article1 article1 article3";
-        justify-content: start;
-        align-items: center;
+    .hero-section {
+			display: grid;
+			grid-template-columns: repeat(3, 1fr);
+			grid-template-rows: repeat(2, 16.2rem);
+			grid-template-areas: 
+					"article1 article1 article2"
+					"article1 article1 article3";
+			justify-content: start;
+			align-items: center;
     }
 
     .article1 {
-        grid-area: article1;
+      grid-area: article1;
     }
 
     .article2 {
-        grid-area: article2;
+      grid-area: article2;
     }
 
     .article3 {
-        grid-area: article3;
+      grid-area: article3;
+    }
+
+    .latest-wrapper {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
+    }
+
+    .latest-article {
+			width: 27rem;
+			margin-bottom: 3rem;
+			height:  auto;
+    }
+
+    .latest-article img {
+			width: 27rem;
+			height: 13.5rem;
+			float: none;
     }
 }
 
 @media only screen and (min-width: 1024px) {
-    .main-section {
-        grid-template-rows: repeat(2, 20.2rem);
+    .hero-section {
+      grid-template-rows: repeat(2, 20.2rem);
     }
     
     .article1 a {
-       font-size: 5.6rem; 
+      font-size: 5.6rem; 
     }
 
     .article2 a, .article3 a {
-        font-size: 2.8rem;
+      font-size: 2.8rem;
     }
 }
 
