--- a/style.css
+++ b/style.css
@@ -118,6 +118,11 @@ nav div .fas {
     font-weight: bold;
 }
 
+.category-name a {
+    color: #FF4422;
+    text-decoration: none;
+}
+
 .latest-article {
     border: 1px solid #000;
     margin: 30px 0 20px 0;
@@ -153,12 +158,66 @@ figcaption span .fa-minus {
     margin-bottom: 0.8rem;
 }
 
+.latest-funding,
+.apps {
+    width: 95%;
+    margin: auto;
+}
+
+.latest-funding > div > ul li {
+    margin: 1.3rem 0;
+}
+
+.latest-funding > div > ul li:last-child {
+    margin-bottom: 2.6rem;
+}
+
+.latest-funding > div > ul a {
+    text-decoration: none;
+    font-size: 1.6rem;
+    color: #FF4422;
+}
+
+
+.funding-article p {
+    font-size: 1.3rem;
+    margin: 1rem;
+    margin-left: 1.6rem;
+}
+
+.funding-article .funding-amount {
+    margin: 0;
+}
+
+.funding-article p .fas {
+    margin-right: .7rem;
+}
+
+.funding-article p.raise {
+    font-size: 1.2rem;
+    margin-bottom: 4rem;
+}
+
+.funding-article p span {
+    color: #aaa;
+}
+
 .funding-header {
     height: 3rem;
     padding-left: 8rem;
-    background-color: red;
+    background-color: #FF4422;
     display: flex;
     align-items: center;
+}
+
+.funding-type {
+    font-size: 1.1rem;
+    font-weight: 100;
+}
+
+.funding-header,
+.funding-amount {
+    font-size: 1.8rem;
 }
 
 .funding-details {
@@ -237,10 +296,11 @@ figcaption span .fa-minus {
     .latest-wrapper {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(4, 22rem);
+        grid-template-rows: repeat(2, 22rem);
         gap: 15px;
         /* flex-wrap: wrap; */
         justify-content: space-between;
+        margin-bottom: 6rem;
     }
 
     .latest-article {
@@ -280,9 +340,10 @@ figcaption span .fa-minus {
     .latest-wrapper {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(4, 22rem);
+        grid-template-rows: repeat(2, 22rem);
         gap: 15px;
         /* flex-wrap: wrap; */
         justify-content: space-between;
+        margin-bottom: 6rem;
     }
 }
