--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ html {
 
 .category-red {
   color: red;
+  font-size: 1.3rem;
 }
 
 .article-meta {
@@ -293,9 +294,18 @@ figcaption span .fa-minus {
 
 .category-second {
   width: 100%;
+  height: 9.6rem;
   display: flex;
   justify-content: space-between;
-  margin: 1.5rem 0 1.5rem 1rem;
+  background: rgb(250, 240, 238);
+  margin-top: .4rem;
+}
+
+/* .category-second .category-red */
+
+.category-second div {
+  padding: 1rem 1.4rem 0;
+
 }
 
 .category-second img {
@@ -311,6 +321,7 @@ figcaption span .fa-minus {
   text-decoration: none;
   color: red;
   margin-top: 0.5rem;
+  font-size: 1.4rem;
 }
 
 .category-third h2 {
@@ -324,7 +335,7 @@ figcaption span .fa-minus {
   color: #333;
   display: block;
   margin: 1rem 0;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
 }
 
 .category-third > h2 > a:before {
@@ -342,6 +353,17 @@ figcaption span .fa-minus {
 .category-third a:hover {
   text-decoration: none;
   color: #111;
+}
+
+.deals .top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.deals .top .see {
+  color: #f42;
+  font-size: 1.6rem;
 }
 
 .nav-bottom {
@@ -401,10 +423,22 @@ figcaption span .fa-minus {
     float: none;
   }
 
+  .latest-funding div ul {
+    width: 30rem;
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .latest-funding div li a {
+    border-right: 1px #f42 solid;
+    padding: 0 .7rem;
+  }
+
   .latest-funding-wrapper {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 2rem;
+    /* margin-top: 2rem; */
   }
 
   .hide768 {
